# Source/Events/Events.Server/Swagger/v1/Swagger.json
@@ -10,6 +10,7 @@
         "tags": [
           "Topics"
         ],
+        "operationId": "GetTopics",
         "responses": {
           "200": {
             "description": "Success",
@@ -76,6 +77,7 @@
         "tags": [
           "Topics"
         ],
+        "operationId": "GetTopic",
         "parameters": [
           {
             "name": "id",
@@ -110,7 +112,7 @@
         }
       }
     },
-    "/api/Topics/{topicName}": {
+    "/api/Topics/AddMessage": {
       "post": {
         "tags": [
           "Topics"
@@ -127,14 +129,6 @@
           {
             "name": "message",
             "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "topicName",
-            "in": "path",
-            "required": true,
             "schema": {
               "type": "string"
             }
